# Facial-Keypoints-Detection

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: baseline.json  mobilenet_v2.json
data/: README.md
docs/: README.md
docs/presentations/: Final_Presentation_Template_SDSC8007.pptx
main/: main.ipynb
notebooks/: facial_keypoints_experiment.ipynb
scripts/: make_submission.py  train.py
src/facial_keypoints/: __init__.py  config.py  data.py  engine.py  inference.py  metrics.py  models.py
tests/: test_smoke.py
