[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sdsc8007-facial-keypoints"
version = "0.1.0"
description = "PyTorch facial keypoints detection project for SDSC8007."
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "pandas",
    "scikit-learn",
    "torch",
    "torchvision",
]

[project.optional-dependencies]
dev = ["ipykernel", "jupyter", "pytest", "ruff"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
